feat: refactor cloudflare clusterissuer

--- a/kubernetes/main/apps/cert-manager/cert-manager/issuers/clusterissuer.yaml
+++ b/kubernetes/main/apps/cert-manager/cert-manager/issuers/clusterissuer.yaml
@@ -7,16 +7,14 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: jory@jory.dev
     privateKeySecretRef:
       name: letsencrypt-production
     solvers:
       - dns01:
           cloudflare:
-            email: jory@jory.dev
             apiTokenSecretRef:
-              name: cloudflare-secret
-              key: CLOUDFLARE_API_KEY
+              name: cloudflare
+              key: CLOUDFLARE_DNS_TOKEN
         selector:
           dnsZones: ["jory.dev"]
 ---
@@ -28,15 +26,13 @@ metadata:
 spec:
   acme:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
-    email: jory@jory.dev
     privateKeySecretRef:
       name: letsencrypt-staging
     solvers:
       - dns01:
           cloudflare:
-            email: jory@jory.dev
             apiTokenSecretRef:
-              name: cloudflare-secret
-              key: CLOUDFLARE_API_KEY
+              name: cloudflare
+              key: CLOUDFLARE_DNS_TOKEN
         selector:
           dnsZones: ["jory.dev"]
