feat: setup headlamp oidc

--- a/kubernetes/main/apps/flux-system/headlamp/app/helmrelease.yaml
+++ b/kubernetes/main/apps/flux-system/headlamp/app/helmrelease.yaml
@@ -36,6 +36,12 @@ spec:
           - mountPath: /build/plugins
             name: headlamp-plugins
     config:
+      oidc:
+        secret:
+          create: false
+        externalSecret:
+          enabled: true
+          name: headlamp-secret
       pluginsDir: /build/plugins
     ingress:
       enabled: true
