feat: add reloader to headlamp

--- a/kubernetes/main/apps/flux-system/headlamp/app/helmrelease.yaml
+++ b/kubernetes/main/apps/flux-system/headlamp/app/helmrelease.yaml
@@ -24,6 +24,8 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    podAnnotations:
+      reloader.stakater.com/auto: "true"
     fullnameOverride: headlamp
     initContainers:
       - image: ghcr.io/headlamp-k8s/headlamp-plugin-flux:v0.1.0-beta-2@sha256:c63dc4e10d7ddb95c966194b5e6fbe2012feb7f932bafa24692daed3cf6c248a
