--- a/kubernetes/main/apps/flux-system/headlamp/app/rbac.yaml
+++ b/kubernetes/main/apps/flux-system/headlamp/app/rbac.yaml
@@ -1,4 +1,5 @@
 ---
+### Token Auth
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -27,3 +28,17 @@ subjects:
   - kind: ServiceAccount
     name: *name
     namespace: flux-system
+---
+### Authentik Group Binding
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: headlamp-admin-oidc
+roleRef:
+  kind: ClusterRole
+  name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+- kind: Group
+  name: Infrastructure
+  apiGroup: rbac.authorization.k8s.io
