--- a/kubernetes/main/apps/flux-system/headlamp/app/externalsecret.yaml
+++ b/kubernetes/main/apps/flux-system/headlamp/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
         OIDC_ISSUER_URL: "https://sso.jory.dev/application/o/headlamp/"
         OIDC_CLIENT_ID: "{{ .HEADLAMP_CLIENT_ID }}"
         OIDC_CLIENT_SECRET: "{{ .HEADLAMP_CLIENT_SECRET }}"
-        OIDC_SCOPES: "openid email profile"
+        OIDC_SCOPES: "openid email profile groups"
   dataFrom:
   - extract:
       key: headlamp
