feat: try hardcoding the user email

--- a/kubernetes/main/apps/flux-system/headlamp/app/rbac.yaml
+++ b/kubernetes/main/apps/flux-system/headlamp/app/rbac.yaml
@@ -39,6 +39,6 @@ roleRef:
   name: cluster-admin
   apiGroup: rbac.authorization.k8s.io
 subjects:
-- kind: Group
-  name: Infrastructure
+- kind: User
+  name: jory@jory.dev
   apiGroup: rbac.authorization.k8s.io
