--- a/kubernetes/main/apps/flux-system/headlamp/app/helmrelease.yaml
+++ b/kubernetes/main/apps/flux-system/headlamp/app/helmrelease.yaml
@@ -38,12 +38,12 @@ spec:
           - mountPath: /build/plugins
             name: headlamp-plugins
     config:
-      oidc:
-        secret:
-          create: false
-        externalSecret:
-          enabled: true
-          name: headlamp-secret
+      # oidc:
+      #   secret:
+      #     create: false
+      #   externalSecret:
+      #     enabled: true
+      #     name: headlamp-secret
       pluginsDir: /build/plugins
     ingress:
       enabled: true
