--- a/kubernetes/shared/bootstrap/helmfile.yaml
+++ b/kubernetes/shared/bootstrap/helmfile.yaml
@@ -1,4 +1,9 @@
 ---
+environments:
+  default:
+    values:
+      - cluster: {{ requiredEnv "CLUSTER" }}
+---
 # yaml-language-server: $schema=https://json.schemastore.org/helmfile
 
 helmDefaults:
@@ -27,7 +32,7 @@ releases:
     namespace: kube-system
     chart: cilium/cilium
     version: 1.16.6
-    values: ["../../{{ requiredEnv 'CLUSTER' }}/apps/kube-system/cilium/app/helm-values.yaml"]
+    values: ["../../{{ .Values.cluster }}/apps/kube-system/cilium/app/helm-values.yaml"]
     hooks:
       - events: ["postsync"]
         command: kubectl
@@ -37,35 +42,35 @@ releases:
           - --server-side
           - --field-manager=kustomize-controller
           - --kustomize
-          - ../../{{ requiredEnv 'CLUSTER' }}/apps/kube-system/cilium/config
+          - ../../{{ .Values.cluster }}/apps/kube-system/cilium/config
     needs: ["observability/kube-prometheus-stack-crds"]
 
   - name: coredns
     namespace: kube-system
     chart: oci://ghcr.io/coredns/charts/coredns
     version: 1.39.0
-    values: ["../../{{ requiredEnv 'CLUSTER' }}/apps/kube-system/coredns/app/helm-values.yaml"]
+    values: ["../../{{ .Values.cluster }}/apps/kube-system/coredns/app/helm-values.yaml"]
     needs: ["kube-system/cilium"]
 
   - name: cert-manager
     namespace: cert-manager
     chart: jetstack/cert-manager
     version: v1.16.3
-    values: ["../../{{ requiredEnv 'CLUSTER' }}/apps/cert-manager/cert-manager/app/helm-values.yaml"]
+    values: ["../../{{ .Values.cluster }}/apps/cert-manager/cert-manager/app/helm-values.yaml"]
     needs: ["kube-system/coredns"]
 
   - name: external-secrets
     namespace: external-secrets
     chart: oci://ghcr.io/external-secrets/charts/external-secrets
     version: 0.13.0
-    values: ["../../{{ requiredEnv 'CLUSTER' }}/apps/external-secrets/external-secrets/app/helm-values.yaml"]
+    values: ["../../{{ .Values.cluster }}/apps/external-secrets/external-secrets/app/helm-values.yaml"]
     needs: ["cert-manager/cert-manager"]
 
   - name: kustomize-mutating-webhook
     namespace: flux-system
     chart: fluxcd-kustomize-mutating-webhook/kustomize-mutating-webhook
     version: 0.3.0
-    values: ["../../{{ requiredEnv 'CLUSTER' }}/apps/flux-system/kustomize-mutating-webhook/app/helm-values.yaml"]
+    values: ["../../{{ .Values.cluster }}/apps/flux-system/kustomize-mutating-webhook/app/helm-values.yaml"]
     needs: ["external-secrets/external-secrets"]
 
   - name: wipe-rook
@@ -79,7 +84,7 @@ releases:
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.13.0
-    values: ["../../{{ requiredEnv 'CLUSTER' }}/apps/flux-system/flux-operator/app/helm-values.yaml"]
+    values: ["../../{{ .Values.cluster }}/apps/flux-system/flux-operator/app/helm-values.yaml"]
     needs: ["kube-system/wipe-rook"]
 
   - name: flux-instance
@@ -87,5 +92,5 @@ releases:
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
     version: 0.13.0
     wait: false
-    values: ["../../{{ requiredEnv 'CLUSTER' }}/apps/flux-system/flux-operator/instance/helm-values.yaml"]
+    values: ["../../{{ .Values.cluster }}/apps/flux-system/flux-operator/instance/helm-values.yaml"]
     needs: ["flux-system/flux-operator"]
