fix: cloudflare dns token

--- a/kubernetes/utility/apps/network/external/cloudflare-ddns/externalsecret.yaml
+++ b/kubernetes/utility/apps/network/external/cloudflare-ddns/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     name: *name
     template:
       data:
-        CLOUDFLARE_API_KEY: "{{ .CLOUDFLARE_API_KEY }}"
+        api-token: "{{ .CLOUDFLARE_DNS_TOKEN }}"
   dataFrom:
   - extract:
       key: cloudflare
