--- a/kubernetes/utility/apps/network/external/cloudflare-ddns/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/external/cloudflare-ddns/helmrelease.yaml
@@ -43,8 +43,8 @@ spec:
               ACCOUNT_TOKEN:
                 valueFrom:
                   secretKeyRef:
-                    name: cloudflare-ddns
-                    key: CLOUDFLARE_API_KEY
+                    name: *app
+                    key: api-token
             probes:
               liveness:
                 enabled: true
