--- a/kubernetes/utility/apps/home-automation/zigbee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/home-automation/zigbee2mqtt/app/helmrelease.yaml
@@ -83,9 +83,7 @@ spec:
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
-              capabilities:
-                add: [NET_BIND_SERVICE]
-                drop: [ALL]
+              capabilities: { drop: ["ALL"] }
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
