--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -8,13 +8,13 @@ shopt: [globstar]
 vars:
   CLUSTER: '{{.CLUSTER | default "main"}}'
   CLUSTER_DIR: '{{.ROOT_DIR}}/kubernetes/{{.CLUSTER}}'
-  BOOTSTRAP_TALOS_DIR: '{{.CLUSTER_DIR}}/talos'
-  BOOTSTRAP_DIR: '{{.ROOT_DIR}}/kubernetes/shared/bootstrap'
+  SHARED_DIR: '{{.ROOT_DIR}}/kubernetes/shared'
+  TALOS_DIR: '{{.CLUSTER_DIR}}/talos'
 
 env:
   MINIJINJA_CONFIG_FILE: '{{.ROOT_DIR}}/.minijinja.toml'
   SOPS_AGE_KEY_FILE: '{{.ROOT_DIR}}/age.key'
-  TALOSCONFIG: '{{.BOOTSTRAP_TALOS_DIR}}/clusterconfig/talosconfig'
+  TALOSCONFIG: '{{.TALOS_DIR}}/clusterconfig/talosconfig'
 
 includes:
   bootstrap: .taskfiles/bootstrap
