--- a/kubernetes/shared/bootstrap/helmfile.yaml
+++ b/kubernetes/shared/bootstrap/helmfile.yaml
@@ -1,9 +1,4 @@
 ---
-environments:
-  default:
-    values:
-      - cluster: {{ requiredEnv "CLUSTER" }}
----
 # yaml-language-server: $schema=https://json.schemastore.org/helmfile
 
 helmDefaults:
@@ -32,65 +27,59 @@ releases:
     namespace: kube-system
     chart: cilium/cilium
     version: 1.16.6
-    values: ["../../{{ .Values.cluster }}/apps/kube-system/cilium/app/helm-values.yaml"]
+    values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/kube-system/cilium/app/helm-values.yaml']
     hooks:
-      - events: ["postsync"]
-        command: kubectl
-        args:
-          - apply
-          - --namespace=kube-system
-          - --server-side
-          - --field-manager=kustomize-controller
-          - --kustomize
-          - ../../{{ .Values.cluster }}/apps/kube-system/cilium/config
-    needs: ["observability/kube-prometheus-stack-crds"]
+      - events: ['postsync']
+        command: bash
+        args: ['{{ requiredEnv "SHARED_DIR" }}/bootstrap/scripts/cilium-postsync.sh']
+    needs: ['observability/kube-prometheus-stack-crds']
 
   - name: coredns
     namespace: kube-system
     chart: oci://ghcr.io/coredns/charts/coredns
     version: 1.39.0
-    values: ["../../{{ .Values.cluster }}/apps/kube-system/coredns/app/helm-values.yaml"]
-    needs: ["kube-system/cilium"]
+    values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/kube-system/coredns/app/helm-values.yaml']
+    needs: ['kube-system/cilium']
 
   - name: cert-manager
     namespace: cert-manager
     chart: jetstack/cert-manager
     version: v1.16.3
-    values: ["../../{{ .Values.cluster }}/apps/cert-manager/cert-manager/app/helm-values.yaml"]
-    needs: ["kube-system/coredns"]
+    values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/cert-manager/cert-manager/app/helm-values.yaml']
+    needs: ['kube-system/coredns']
 
   - name: external-secrets
     namespace: external-secrets
     chart: oci://ghcr.io/external-secrets/charts/external-secrets
     version: 0.13.0
-    values: ["../../{{ .Values.cluster }}/apps/external-secrets/external-secrets/app/helm-values.yaml"]
-    needs: ["cert-manager/cert-manager"]
+    values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/external-secrets/external-secrets/app/helm-values.yaml']
+    needs: ['cert-manager/cert-manager']
 
   - name: kustomize-mutating-webhook
     namespace: flux-system
     chart: fluxcd-kustomize-mutating-webhook/kustomize-mutating-webhook
     version: 0.3.0
-    values: ["../../{{ .Values.cluster }}/apps/flux-system/kustomize-mutating-webhook/app/helm-values.yaml"]
-    needs: ["external-secrets/external-secrets"]
+    values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/flux-system/kustomize-mutating-webhook/app/helm-values.yaml']
+    needs: ['external-secrets/external-secrets']
 
   - name: wipe-rook
     namespace: kube-system
     chart: oci://ghcr.io/bjw-s/helm/app-template
     version: 3.6.1
-    values: ["./templates/wipe-rook.yaml.gotmpl"]
-    needs: ["flux-system/kustomize-mutating-webhook"]
+    values: ['{{ requiredEnv "SHARED_DIR" }}/bootstrap/templates/wipe-rook.yaml.gotmpl']
+    needs: ['flux-system/kustomize-mutating-webhook']
 
   - name: flux-operator
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.13.0
-    values: ["../../{{ .Values.cluster }}/apps/flux-system/flux-operator/app/helm-values.yaml"]
-    needs: ["kube-system/wipe-rook"]
+    values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/flux-system/flux-operator/app/helm-values.yaml']
+    needs: ['kube-system/wipe-rook']
 
   - name: flux-instance
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
     version: 0.13.0
     wait: false
-    values: ["../../{{ .Values.cluster }}/apps/flux-system/flux-operator/instance/helm-values.yaml"]
-    needs: ["flux-system/flux-operator"]
+    values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/flux-system/flux-operator/instance/helm-values.yaml']
+    needs: ['flux-system/flux-operator']
