--- a/kubernetes/main/apps/rook-ceph/kustomization.yaml
+++ b/kubernetes/main/apps/rook-ceph/kustomization.yaml
@@ -6,5 +6,7 @@ namespace: rook-ceph
 resources:
   - ./rook-ceph/ks.yaml
 components:
+  - ../../components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
