--- a/kubernetes/main/apps/flux-system/kustomization.yaml
+++ b/kubernetes/main/apps/flux-system/kustomization.yaml
@@ -6,7 +6,9 @@ namespace: flux-system
 resources:
   - ./flux-operator/ks.yaml
   - ./headlamp/ks.yaml
-  - ./kustomize-mutating-webhook/ks.yaml
+  # - ./kustomize-mutating-webhook/ks.yaml
 components:
+  - ../../components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
