--- a/kubernetes/main/apps/security/kustomization.yaml
+++ b/kubernetes/main/apps/security/kustomization.yaml
@@ -6,5 +6,7 @@ namespace: security
 resources:
   - ./authentik/ks.yaml
 components:
+  - ../../components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
