--- a/kubernetes/main/flux/cluster/ks.yaml
+++ b/kubernetes/main/flux/cluster/ks.yaml
@@ -61,6 +61,27 @@ spec:
     - name: cluster-shared-meta
   interval: 30m
   path: ./kubernetes/main/apps
+  patches:
+    - patch: |-
+        apiVersion: kustomize.toolkit.fluxcd.io/v1
+        kind: Kustomization
+        metadata:
+          name: not-used
+        spec:
+          postBuild:
+            substituteFrom:
+              - kind: ConfigMap
+                name: cluster-settings
+            substituteFrom:
+              - kind: ConfigMap
+                name: cluster-settings-shared
+      target:
+        group: kustomize.toolkit.fluxcd.io
+        kind: Kustomization
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-settings
   prune: true
   sourceRef:
     kind: GitRepository
@@ -68,15 +89,4 @@ spec:
     namespace: flux-system
   timeout: 5m
   wait: false
-  # patches:
-  #   - # Add Sops decryption to child Kustomizations
-  #     patch: |
-  #       - op: add
-  #         path: /spec/decryption
-  #         value:
-  #           provider: sops
-  #           secretRef:
-  #             name: sops-age
-  #     target:
-  #       group: kustomize.toolkit.fluxcd.io
-  #       kind: Kustomization
+
