--- a/kubernetes/utility/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/utility/apps/kube-tools/kustomization.yaml
@@ -10,5 +10,7 @@ resources:
   - ./reloader/ks.yaml
   - ./system-upgrade-controller/ks.yaml
 components:
+  - ../../components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
