--- a/kubernetes/utility/apps/storage/kustomization.yaml
+++ b/kubernetes/utility/apps/storage/kustomization.yaml
@@ -8,5 +8,7 @@ resources:
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
 components:
+  - ../../components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
