feat: migrate cluster-settings to component (#3645)
* feat: migrate cluster-settings to component

--- a/kubernetes/main/apps/downloads/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/kustomization.yaml
@@ -18,5 +18,7 @@ resources:
   - ./sabnzbd/ks.yaml
   - ./sonarr/ks.yaml
 components:
+  - ../../flux/meta/components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
