--- a/kubernetes/utility/apps/observability/kustomization.yaml
+++ b/kubernetes/utility/apps/observability/kustomization.yaml
@@ -10,5 +10,7 @@ resources:
   - ./network-ups-tools/ks.yaml
   - ./smartctl-exporter/ks.yaml
 components:
+  - ../../flux/meta/components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
