--- a/kubernetes/main/apps/actions-runner-system/kustomization.yaml
+++ b/kubernetes/main/apps/actions-runner-system/kustomization.yaml
@@ -6,5 +6,7 @@ namespace: actions-runner-system
 resources:
   - ./actions-runner-controller/ks.yaml
 components:
+  - ../../flux/meta/components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
