--- a/kubernetes/main/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/main/apps/external-secrets/kustomization.yaml
@@ -7,5 +7,7 @@ resources:
   - ./external-secrets/ks.yaml
   - ./onepassword/ks.yaml
 components:
+  - ../../flux/meta/components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
