--- a/kubernetes/main/apps/kube-system/kustomization.yaml
+++ b/kubernetes/main/apps/kube-system/kustomization.yaml
@@ -8,5 +8,7 @@ resources:
   - ./coredns/ks.yaml
   - ./metrics-server/ks.yaml
 components:
+  - ../../flux/meta/components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
