--- a/kubernetes/main/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/main/apps/kube-tools/kustomization.yaml
@@ -13,5 +13,7 @@ resources:
   - ./spegel/ks.yaml
   - ./system-upgrade-controller/ks.yaml
 components:
+  - ../../flux/meta/components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
