--- a/kubernetes/main/apps/media/kustomization.yaml
+++ b/kubernetes/main/apps/media/kustomization.yaml
@@ -15,5 +15,7 @@ resources:
   - ./wizarr/ks.yaml
   - ./your-spotify/ks.yaml
 components:
+  - ../../flux/meta/components/cluster-vars
   - ../../../shared/meta/components/alerts
+  - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
