feat: add back cluster-secrets

--- a/kubernetes/main/apps/database/crunchy-postgres/app/nfs-pvc.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/app/nfs-pvc.yaml
@@ -10,7 +10,7 @@ spec:
   storageClassName: nfs-slow #csi-driver-nfs
   nfs:
     server: voyager.internal
-    path: /mnt/user/kubernetes/postgres
+    path: ${SECRET_NFS_POSTGRES}
   mountOptions:
     - nfsvers=4.2
     - hard
