--- a/kubernetes/main/apps/downloads/radarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/radarr/app/helmrelease.yaml
@@ -115,6 +115,6 @@ spec:
       data:
         type: nfs
         server: voyager.internal
-        path: /mnt/user/data
+        path: ${SECRET_NFS_DATA}
         globalMounts:
         - path: /data
