--- a/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
         - name: media
           nfs:
             server: voyager.internal
-            path: /mnt/user/data
+            path: ${SECRET_NFS_DATA}
       volumeMounts:
         - mountPath: &path /media
           name: media
