--- a/kubernetes/main/apps/self-hosted/paperless/app/helmrelease.yaml
+++ b/kubernetes/main/apps/self-hosted/paperless/app/helmrelease.yaml
@@ -108,6 +108,6 @@ spec:
       nas:
         type: nfs
         server: voyager.internal
-        path: /mnt/user/scans
+        path: ${SECRET_NFS_PAPERLESS}s
         globalMounts:
           - path: /data/nas
