--- a/kubernetes/main/apps/downloads/bazarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/app/helmrelease.yaml
@@ -126,7 +126,7 @@ spec:
       data:
         type: nfs
         server: voyager.internal
-        path: /mnt/user/data
+        path: ${SECRET_NFS_DATA}
         globalMounts:
         - path: /data
       log:
