--- a/kubernetes/main/apps/downloads/kapowarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/kapowarr/app/helmrelease.yaml
@@ -75,6 +75,6 @@ spec:
       data:
         type: nfs
         server: voyager.internal
-        path: /mnt/user/data
+        path: ${SECRET_NFS_DATA}
         globalMounts:
           - path: /data
