--- a/kubernetes/main/apps/downloads/metube/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/metube/app/helmrelease.yaml
@@ -73,7 +73,7 @@ spec:
       downloads:
         type: nfs
         server: voyager.internal
-        path: /mnt/user/data
+        path: ${SECRET_NFS_DATA}
         globalMounts:
         - path: /downloads
           subPath: metube
