--- a/kubernetes/main/apps/downloads/readarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/readarr/app/helmrelease.yaml
@@ -98,6 +98,6 @@ spec:
       data:
         type: nfs
         server: voyager.internal
-        path: /mnt/user/data
+        path: ${SECRET_NFS_DATA}
         globalMounts:
         - path: /data
