--- a/kubernetes/main/apps/downloads/sonarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/sonarr/app/helmrelease.yaml
@@ -125,6 +125,6 @@ spec:
       data:
         type: nfs
         server: voyager.internal
-        path: /mnt/user/data
+        path: ${SECRET_NFS_DATA}
         globalMounts:
         - path: /data
