--- a/kubernetes/main/apps/media/kavita/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kavita/app/helmrelease.yaml
@@ -79,7 +79,7 @@ spec:
       media:
         type: nfs
         server: voyager.internal
-        path: /mnt/user/data
+        path: ${SECRET_NFS_DATA}
         globalMounts:
           - path: /data
             subPath: media
