--- a/kubernetes/main/flux/meta/components/cluster-vars/kustomization.yaml
+++ b/kubernetes/main/flux/meta/components/cluster-vars/kustomization.yaml
@@ -3,4 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 resources:
+  - ./cluster-secrets.sops.yaml
   - ./cluster-settings.yaml
