--- a/kubernetes/shared/meta/components/global-vars/cluster-settings.yaml
+++ b/kubernetes/shared/meta/components/global-vars/cluster-settings.yaml
@@ -4,4 +4,7 @@ kind: ConfigMap
 metadata:
   name: cluster-settings-shared
 data:
-  SECRET_DOMAIN: jory.dev
+  TIMEZONE: America/Edmonton
+  CLUSTER_CIDR: 10.42.0.0/16
+  NODE_CIDR: 10.69.1.0/24
+  TRUSTED_CIDR: 192.168.30.0/24
