--- a/kubernetes/shared/meta/components/global-vars/kustomization.yaml
+++ b/kubernetes/shared/meta/components/global-vars/kustomization.yaml
@@ -3,4 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 resources:
+  - ./cluster-secrets.sops.yaml
   - ./cluster-settings.yaml
