--- a/kubernetes/utility/flux/cluster/ks.yaml
+++ b/kubernetes/utility/flux/cluster/ks.yaml
@@ -68,12 +68,20 @@ spec:
         metadata:
           name: not-used
         spec:
+          decryption:
+            provider: sops
+            secretRef:
+              name: sops-age
           postBuild:
             substituteFrom:
               - kind: ConfigMap
                 name: cluster-settings
               - kind: ConfigMap
                 name: cluster-settings-shared
+              - kind: Secret
+                name: cluster-secrets
+              - kind: Secret
+                name: cluster-secrets-shared
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
@@ -81,6 +89,8 @@ spec:
     substituteFrom:
       - kind: ConfigMap
         name: cluster-settings
+      - kind: Secret
+        name: cluster-secrets
   prune: true
   sourceRef:
     kind: GitRepository
