--- a/kubernetes/main/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/main/apps/kube-tools/kustomization.yaml
@@ -17,3 +17,4 @@ components:
   - ../../../shared/meta/components/alerts
   - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
+  - ../../../shared/meta/components/sops
