--- a/kubernetes/main/apps/default/kustomization.yaml
+++ b/kubernetes/main/apps/default/kustomization.yaml
@@ -9,3 +9,4 @@ components:
   - ../../../shared/meta/components/alerts
   - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
+  - ../../../shared/meta/components/sops
