--- a/kubernetes/main/apps/kube-system/kustomization.yaml
+++ b/kubernetes/main/apps/kube-system/kustomization.yaml
@@ -12,3 +12,4 @@ components:
   - ../../../shared/meta/components/alerts
   - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
+  - ../../../shared/meta/components/sops
