--- a/kubernetes/main/apps/media/kustomization.yaml
+++ b/kubernetes/main/apps/media/kustomization.yaml
@@ -19,3 +19,4 @@ components:
   - ../../../shared/meta/components/alerts
   - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
+  - ../../../shared/meta/components/sops
