--- a/kubernetes/main/apps/security/kustomization.yaml
+++ b/kubernetes/main/apps/security/kustomization.yaml
@@ -10,3 +10,4 @@ components:
   - ../../../shared/meta/components/alerts
   - ../../../shared/meta/components/global-vars
   - ../../../shared/meta/components/namespace
+  - ../../../shared/meta/components/sops
