--- a/kubernetes/utility/flux/cluster/ks.yaml
+++ b/kubernetes/utility/flux/cluster/ks.yaml
@@ -89,8 +89,10 @@ spec:
     substituteFrom:
       - kind: ConfigMap
         name: cluster-settings
+        optional: true
       - kind: Secret
         name: cluster-secrets
+        optional: true
   prune: true
   sourceRef:
     kind: GitRepository
