feat: obfuscate more vars

--- a/kubernetes/main/apps/downloads/dashbrr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/dashbrr/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
               DASHBRR__DB_PATH: /cache/._  # cache path is derived from DASHBRR__DB_PATH
               DASHBRR__LISTEN_ADDR: 0.0.0.0:8080
               GIN_MODE: debug
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
             envFrom:
             - secretRef:
                 name: dashbrr-secret
