--- a/kubernetes/main/apps/downloads/kapowarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/kapowarr/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               repository: mrcas/kapowarr
               tag: v1.1.0@sha256:00896367d02a74843219f3ece86a7cd44e97e34ab23dc681442ae39b9e337ca3
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
             resources:
               requests:
                 cpu: 15m
