--- a/kubernetes/main/apps/downloads/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/prowlarr/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
               repository: ghcr.io/joryirving/prowlarr-develop
               tag: 1.30.2.4939@sha256:5e99d50e3d70e7feaf41746604fcd56301d4fd4bd78bf6e3d79c856c8b5bc773
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
               PROWLARR__APP__INSTANCENAME: Prowlarr
               PROWLARR__APP__THEME: dark
               PROWLARR__AUTH__METHOD: External
