--- a/kubernetes/main/apps/downloads/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/sabnzbd/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
               repository: ghcr.io/joryirving/sabnzbd
               tag: 4.4.1@sha256:88256132af4c46bfcc96247473c318a0c7faee4c0a0262fa5e67e54b2345533e
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
               SABNZBD__PORT: &port 8080
               SABNZBD__HOST_WHITELIST_ENTRIES: >-
                 sabnzbd, sabnzbd.downloads, sabnzbd.downloads.svc, sabnzbd.downloads.svc.cluster, sabnzbd.downloads.svc.cluster.local, sabnzbd.${SECRET_DOMAIN}
