--- a/kubernetes/main/apps/games/vrising/app/helmrelease.yaml
+++ b/kubernetes/main/apps/games/vrising/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               tag: 2.1
             env:
               ## Container Settings
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
               SERVERNAME: "Smurf-Rising"
               GAMEPORT: &game 9876
               QUERYPORT: &query 9877
@@ -74,7 +74,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: 10.69.1.33
+          lbipam.cilium.io/ips: ${SVC_ABIOTIC_ADDR}
         ports:
           game:
             enabled: true
