--- a/kubernetes/main/apps/media/komga/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/komga/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               repository: gotson/komga
               tag: "1.19.0@sha256:b7bd32bc66159d020d682702f4b010e5977fecf37351903ed8b959c32c759638"
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
               SERVER_PORT: &port 8080
             resources:
               requests:
