--- a/kubernetes/main/apps/media/plex/kometa/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/kometa/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
           reloader.stakater.com/auto: "true"
         cronjob:
           schedule: "@daily"
-          timeZone: &timeZone America/Edmonton
+          timeZone: &timeZone ${TIMEZONE}
           concurrencyPolicy: Forbid
           successfulJobsHistory: 1
           failedJobsHistory: 1
