--- a/kubernetes/main/apps/media/wizarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/wizarr/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
               repository:  ghcr.io/wizarrrr/wizarr
               tag: 4.2.0
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
             resources:
               requests:
                 cpu: 15m
