--- a/kubernetes/main/apps/self-hosted/actual/app/helmrelease.yaml
+++ b/kubernetes/main/apps/self-hosted/actual/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
               repository: ghcr.io/actualbudget/actual-server
               tag: 25.1.0
             env:
-              GENERIC_TIMEZONE: America/Edmonton
+              GENERIC_TIMEZONE: ${TIMEZONE}
             resources:
               requests:
                 cpu: 15m
