--- a/kubernetes/main/apps/storage/volsync/app/mutations/volsync-mover-nfs.yaml
+++ b/kubernetes/main/apps/storage/volsync/app/mutations/volsync-mover-nfs.yaml
@@ -47,7 +47,7 @@ spec:
                 name: "repository",
                 nfs: Object.spec.template.spec.volumes.nfs{
                   server: "voyager.internal",
-                  path: "/mnt/user/kubernetes/volsync"
+                  path: "${SECRET_NFS_VOLSYNC}"
                 }
               }
             }
