--- a/kubernetes/utility/apps/home-automation/zigbee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/home-automation/zigbee2mqtt/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               repository: ghcr.io/koenkk/zigbee2mqtt
               tag: 2.1.0@sha256:9426e9a8de6c4efc15e13f2802435bd57fbe3f532c1b18a215df98c664b64d19
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
               ZIGBEE2MQTT_DATA: /config
               ZIGBEE2MQTT_CONFIG_ADVANCED_LAST_SEEN: ISO_8601
               ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_LEVEL: info # debug
