--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
@@ -193,7 +193,7 @@ spec:
         metadata:
           annotations:
             external-dns.alpha.kubernetes.io/hostname: cpgo.${SECRET_DOMAIN}
-            lbipam.cilium.io/ips: 10.69.1.34
+            lbipam.cilium.io/ips: ${SVC_CPGO_ADDR}
         type: LoadBalancer
       port: 5432
       replicas: *replicas
