--- a/kubernetes/main/apps/downloads/bazarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
               repository: ghcr.io/joryirving/bazarr
               tag: 1.5.1@sha256:c503d06173aa2a407a4f2aa919c7dbb5b0b1100d0103bd35d2a7e9ef29c0b2d6
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
             envFrom:
             - secretRef:
                 name: bazarr-secret
