--- a/kubernetes/main/apps/downloads/qbittorrent/tools/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/tools/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
               repository: ghcr.io/buroa/qbtools
               tag: v0.19.14@sha256:905617dfc1a8aa1510381d8e177cc5581a49bfa9d56f3f05e0574f6c83987d3c
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
               POD_NAMESPACE:
                 valueFrom:
                   fieldRef:
