--- a/kubernetes/main/apps/games/core-keeper/app/helmrelease.yaml
+++ b/kubernetes/main/apps/games/core-keeper/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               tag: latest #yuck
             env:
               ## Container Settings
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
               # WORLD_INDEX: "0" # Which world index to use.
               WORLD_NAME: Noods Core Keeper # The name to use for the server.
               # WORLD_SEED: "0" # The seed to use for a new world. Set to 0 to generate random seed.
@@ -74,7 +74,7 @@ spec:
     #     controller: *app
     #     type: LoadBalancer
     #     annotations:
-    #       lbipam.cilium.io/ips: 10.69.1.37
+    #       lbipam.cilium.io/ips: ${SVC_COREKEEPER_ADDR}
     #     ports:
     #       game:
     #         protocol: UDP
