--- a/kubernetes/main/apps/games/minecraft/mc-router/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/mc-router/helmrelease.yaml
@@ -27,5 +27,5 @@ spec:
       minecraft:
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: 10.69.1.40
+          lbipam.cilium.io/ips: ${SVC_MINECRAFT_ADDR}
           external-dns.alpha.kubernetes.io/hostname: mc.${SECRET_DOMAIN}
