--- a/kubernetes/main/apps/games/minecraft/takocraft/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/takocraft/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
       failureThreshold: 30
       periodSeconds: 10
     extraEnv:
-      TZ: America/Edmonton
+      TZ: ${TIMEZONE}
       ENABLE_AUTOPAUSE: TRUE # Doesn't work in Kubes
     persistence:
       dataDir:
@@ -92,7 +92,7 @@ spec:
       worldSaveName: takocraft
       viewDistance: 12
       # serviceAnnotations:
-      #   lbipam.cilium.io/ips: 10.69.1.38
+      #   lbipam.cilium.io/ips: ${SVC_TAKOCRAFT_ADDR}
       # serviceType: LoadBalancer
       spigetResources:
       - 36618 #Prom Exporter
