--- a/kubernetes/main/apps/games/minecraft/vibecraft/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/vibecraft/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
       failureThreshold: 30
       periodSeconds: 10
     extraEnv:
-      TZ: America/Edmonton
+      TZ: ${TIMEZONE}
       ENABLE_AUTOPAUSE: TRUE # Doesn't work in Kubes
     persistence:
       dataDir:
