--- a/kubernetes/main/apps/media/ersatztv/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/ersatztv/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
               repository: jasongdove/ersatztv
               tag: v25.1.0-vaapi@sha256:f845dc4d4d458cdeac89f97b2331fe02bb5877e4772ab9cef0e71b776382a657
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
               XDG_DATA_HOME: /config # https://github.com/ErsatzTV/ErsatzTV/issues/327
             probes:
               liveness:
