--- a/kubernetes/main/apps/media/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/jellyseerr/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
               repository: ghcr.io/fallenbagel/jellyseerr
               tag: 2.3.0@sha256:df53a7b06006e9da117a7072a55cf5d8b2071a6272f6bb329d8ca62b6f5c08a6
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
             envFrom:
               - secretRef:
                   name: jellyseerr-secret
