--- a/kubernetes/main/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/app/helmrelease.yaml
@@ -40,9 +40,9 @@ spec:
               repository: ghcr.io/joryirving/plex
               tag: 1.41.3.9314-a0bfb8370@sha256:661d33ce9a39d26de9f0e62d8cb179cdb77327757f478dc8a8ad373a70e50395
             env:
-              TZ: America/Edmonton
-              PLEX_ADVERTISE_URL: https://plex.${SECRET_DOMAIN}:443,http://10.69.1.35:32400
-              PLEX_NO_AUTH_NETWORKS: 10.42.0.0/16,192.168.30.0/24
+              TZ: ${TIMEZONE}
+              PLEX_ADVERTISE_URL: https://plex.${SECRET_DOMAIN}:443,http://${SVC_PLEX_ADDR}:32400
+              PLEX_NO_AUTH_NETWORKS: ${CLUSTER_CIDR},${TRUSTED_CIDR}
             probes:
               liveness: &probes
                 enabled: true
@@ -87,7 +87,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: 10.69.1.35
+          lbipam.cilium.io/ips: ${SVC_PLEX_ADDR}
         ports:
           http:
             port: 32400
