--- a/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
               repository: ghcr.io/joryirving/tautulli
               tag: 2.15.1@sha256:a3a5c3e4c592151d7ef76d99636e3c2bdc0b8daf8f372e7fa7ed928c5caf7d80
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
               TAUTULLI__PORT: &port 80
             probes:
               liveness: &probes
