--- a/kubernetes/main/apps/media/your-spotify/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/your-spotify/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
               repository: yooooomi/your_spotify_server
               tag: 1.12.0@sha256:081b53a4faf529b7e8ceb0147ba10f4780730b729aebf2edb469a8c30441e99a
             env:
-              TIMEZONE: America/Edmonton
+              TIMEZONE: ${TIMEZONE}
               # Caveat if it includes Spotify in name: https://github.com/Yooooomi/your_spotify/pull/254
               API_ENDPOINT: &api_endpoint https://spotty.${SECRET_DOMAIN}/api
               CLIENT_ENDPOINT: https://spotty.${SECRET_DOMAIN}
