--- a/kubernetes/main/apps/network/external/ingress-nginx/helmrelease.yaml
+++ b/kubernetes/main/apps/network/external/ingress-nginx/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
       service:
         annotations:
           external-dns.alpha.kubernetes.io/hostname: &hostname external.${SECRET_DOMAIN}
-          lbipam.cilium.io/ips: 10.69.1.32
+          lbipam.cilium.io/ips: ${SVC_NGINX_EXTERNAL}
       ingressClassResource:
         name: external
         default: false
