--- a/kubernetes/main/apps/network/internal/ingress-nginx/helmrelease.yaml
+++ b/kubernetes/main/apps/network/internal/ingress-nginx/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
       service:
         annotations:
           external-dns.alpha.kubernetes.io/hostname: &hostname internal.${SECRET_DOMAIN}
-          lbipam.cilium.io/ips: 10.69.1.31
+          lbipam.cilium.io/ips: ${SVC_NGINX_INTERNAL}
         externalTrafficPolicy: Cluster
       ingressClassResource:
         name: internal
