--- a/kubernetes/main/apps/observability/network-ups-tools/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/network-ups-tools/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
               repository: ghcr.io/jr0dd/network-ups-tools
               tag: v2.8.1@sha256:2a6e47d431cbb901482ad6692f089a7541524fd3538e42857b39663bb331ba25
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
             securityContext:
               privileged: true
             probes:
