--- a/kubernetes/main/apps/self-hosted/homepage/app/helmrelease.yaml
+++ b/kubernetes/main/apps/self-hosted/homepage/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
               repository: ghcr.io/gethomepage/homepage
               tag: v0.10.9
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
             envFrom:
               - secretRef:
                   name: homepage-secret
