--- a/kubernetes/main/apps/self-hosted/lubelog/app/helmrelease.yaml
+++ b/kubernetes/main/apps/self-hosted/lubelog/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               repository: ghcr.io/hargata/lubelogger
               tag: v1.4.3
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
             envFrom:
               - secretRef:
                   name: "{{ .Release.Name }}-secret"
