--- a/kubernetes/utility/apps/home-automation/mosquitto/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/home-automation/mosquitto/app/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
         type: LoadBalancer
         annotations:
           external-dns.alpha.kubernetes.io/hostname: mqtt.${SECRET_DOMAIN}
-          lbipam.cilium.io/ips: 10.69.1.134
+          lbipam.cilium.io/ips: ${SVC_MQTT_ADDR}
         ports:
           http:
             port: 1883
