--- a/kubernetes/utility/apps/observability/network-ups-tools/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/network-ups-tools/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
               repository: ghcr.io/jr0dd/network-ups-tools
               tag: v2.8.1@sha256:2a6e47d431cbb901482ad6692f089a7541524fd3538e42857b39663bb331ba25
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
             securityContext:
               privileged: true
             probes:
@@ -50,7 +50,7 @@ spec:
         controller: *app
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: 10.69.1.136
+          lbipam.cilium.io/ips: ${SVC_NUT_ADDR}
           external-dns.alpha.kubernetes.io/hostname: network-nut.${SECRET_DOMAIN}
         externalTrafficPolicy: Cluster
         ports:
