--- a/kubernetes/utility/apps/self-hosted/free-game-notifier/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/free-game-notifier/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
               repository: ghcr.io/joryirving/free-game-notifier
               tag: 1.6.0@sha256:7477f7cab5de4b35433f75f68fe6aca795accb8776a531f2bd627902c69e0d53
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
               SEND_UPCOMING: false
             envFrom:
               - secretRef:
