--- a/kubernetes/utility/apps/self-hosted/meshcentral/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/meshcentral/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
               repository: ghcr.io/ylianst/meshcentral
               tag: 1.1.38@sha256:1431343422c056bba976574605bb78fb910f9ce54b357d0671e5c5a27a8cc54d
             env:
-              TZ: America/Edmonton
+              TZ: ${TIMEZONE}
               NODE_ENV: production
               HOSTNAME: &host mesh.${SECRET_DOMAIN}
               ALLOW_NEW_ACCOUNTS: "false"
