--- a/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
@@ -19,7 +19,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -42,7 +42,7 @@ spec:
       namespace: downloads
   interval: 30m
   path: ./kubernetes/main/apps/downloads/qbittorrent/tools
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
