--- a/kubernetes/main/apps/kube-tools/system-upgrade-controller/ks.yaml
+++ b/kubernetes/main/apps/kube-tools/system-upgrade-controller/ks.yaml
@@ -13,7 +13,7 @@ spec:
       namespace: kube-tools
   interval: 30m
   path: ./kubernetes/main/apps/kube-tools/system-upgrade-controller/app
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -43,7 +43,7 @@ spec:
       TALOS_VERSION: v1.9.3
       # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
       KUBERNETES_VERSION: v1.32.1
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
