--- a/kubernetes/main/apps/network/internal/ks.yaml
+++ b/kubernetes/main/apps/network/internal/ks.yaml
@@ -14,7 +14,7 @@ spec:
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/network/internal/external-dns
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -37,7 +37,7 @@ spec:
       namespace: cert-manager
   interval: 30m
   path: ./kubernetes/main/apps/network/internal/ingress-nginx
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
