--- a/kubernetes/main/apps/security/authentik/ks.yaml
+++ b/kubernetes/main/apps/security/authentik/ks.yaml
@@ -25,7 +25,7 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: sso
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
