--- a/kubernetes/main/apps/self-hosted/redlib/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/redlib/ks.yaml
@@ -15,7 +15,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
