--- a/kubernetes/main/apps/kube-tools/intel-device-plugins/ks.yaml
+++ b/kubernetes/main/apps/kube-tools/intel-device-plugins/ks.yaml
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/main/apps/kube-tools/intel-device-plugins/operator
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -30,7 +30,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/main/apps/kube-tools/intel-device-plugins/gpu
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
