--- a/kubernetes/main/apps/media/plex/ks.yaml
+++ b/kubernetes/main/apps/media/plex/ks.yaml
@@ -24,7 +24,7 @@ spec:
       GATUS_PATH: /web/index.html
       VOLSYNC_CAPACITY: 50Gi
       VOLSYNC_CACHE_CAPACITY: 25Gi
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -63,7 +63,7 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 10Gi
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -93,7 +93,7 @@ spec:
 #   postBuild:
 #     substitute:
 #       APP: *app
-#   prune: true
+#   prune: false #revert to true
 #   sourceRef:
 #     kind: GitRepository
 #     name: flux-system
@@ -116,7 +116,7 @@ spec:
       namespace: media
   interval: 30m
   path: ./kubernetes/main/apps/media/plex/plex-auto-languages
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -144,7 +144,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
