--- a/kubernetes/main/apps/media/wizarr/ks.yaml
+++ b/kubernetes/main/apps/media/wizarr/ks.yaml
@@ -24,7 +24,7 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: join
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
