--- a/kubernetes/main/apps/observability/exporters/nut-exporter/ks.yaml
+++ b/kubernetes/main/apps/observability/exporters/nut-exporter/ks.yaml
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/main/apps/observability/exporters/nut-exporter/app
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -30,7 +30,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/main/apps/observability/exporters/nut-exporter/dashboard
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
