--- a/kubernetes/main/apps/self-hosted/atuin/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/atuin/ks.yaml
@@ -23,7 +23,7 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: sh
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
