--- a/kubernetes/utility/apps/external-secrets/onepassword/ks.yaml
+++ b/kubernetes/utility/apps/external-secrets/onepassword/ks.yaml
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/utility/apps/external-secrets/onepassword/app
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -33,7 +33,7 @@ spec:
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/utility/apps/external-secrets/onepassword/stores
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
