--- a/kubernetes/utility/apps/flux-system/tofu-controller/ks.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/ks.yaml
@@ -13,7 +13,7 @@ spec:
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/utility/apps/flux-system/tofu-controller/app
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -36,7 +36,7 @@ spec:
       namespace: flux-system
   interval: 30m
   path: ./kubernetes/utility/apps/flux-system/tofu-controller/terraform
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
