--- a/kubernetes/utility/apps/observability/smartctl-exporter/ks.yaml
+++ b/kubernetes/utility/apps/observability/smartctl-exporter/ks.yaml
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/utility/apps/observability/smartctl-exporter/app
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
