--- a/kubernetes/utility/apps/self-hosted/it-tools/ks.yaml
+++ b/kubernetes/utility/apps/self-hosted/it-tools/ks.yaml
@@ -15,7 +15,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
-  prune: true
+  prune: false #revert to true
   sourceRef:
     kind: GitRepository
     name: flux-system
