fix: not going to go that route

--- a/kubernetes/main/apps/games/minecraft/ks.yaml
+++ b/kubernetes/main/apps/games/minecraft/ks.yaml
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/main/apps/games/minecraft/mc-router
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -40,7 +40,7 @@ spec:
 #     substitute:
 #       APP: *app
 #       VOLSYNC_CAPACITY: 15Gi
-#   prune: false #revert to true
+#   prune: true
 #   sourceRef:
 #     kind: GitRepository
 #     name: flux-system
@@ -70,7 +70,7 @@ spec:
 #     substitute:
 #       APP: *app
 #       VOLSYNC_CAPACITY: 15Gi
-#   prune: false #revert to true
+#   prune: true
 #   sourceRef:
 #     kind: GitRepository
 #     name: flux-system
@@ -100,7 +100,7 @@ spec:
 #     substitute:
 #       APP: *app
 #       VOLSYNC_CAPACITY: 15Gi
-#   prune: false #revert to true
+#   prune: true
 #   sourceRef:
 #     kind: GitRepository
 #     name: flux-system
