--- a/kubernetes/main/apps/media/komga/ks.yaml
+++ b/kubernetes/main/apps/media/komga/ks.yaml
@@ -20,7 +20,7 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 20Gi
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
