--- a/kubernetes/utility/apps/kube-tools/powertune/ks.yaml
+++ b/kubernetes/utility/apps/kube-tools/powertune/ks.yaml
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/utility/apps/kube-tools/powertune/app
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
