--- a/kubernetes/main/apps/actions-runner-system/actions-runner-controller/ks.yaml
+++ b/kubernetes/main/apps/actions-runner-system/actions-runner-controller/ks.yaml
@@ -13,7 +13,7 @@ spec:
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/actions-runner-system/actions-runner-controller/app
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -33,7 +33,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/main/apps/actions-runner-system/actions-runner-controller/runners
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
