--- a/kubernetes/main/apps/database/crunchy-postgres/ks.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/ks.yaml
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/main/apps/database/crunchy-postgres/app
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -35,7 +35,7 @@ spec:
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/database/crunchy-postgres/cluster
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -58,7 +58,7 @@ spec:
       namespace: database
   interval: 30m
   path: ./kubernetes/main/apps/database/crunchy-postgres/stores
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -81,7 +81,7 @@ spec:
       namespace: database
   interval: 30m
   path: ./kubernetes/main/apps/database/crunchy-postgres/userinit-controller
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
