--- a/kubernetes/main/apps/media/jellyseerr/ks.yaml
+++ b/kubernetes/main/apps/media/jellyseerr/ks.yaml
@@ -22,7 +22,7 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: requests
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
