--- a/kubernetes/main/apps/observability/exporters/smartctl-exporter/ks.yaml
+++ b/kubernetes/main/apps/observability/exporters/smartctl-exporter/ks.yaml
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/main/apps/observability/exporters/smartctl-exporter/app
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
