--- a/kubernetes/main/apps/observability/exporters/unpoller/ks.yaml
+++ b/kubernetes/main/apps/observability/exporters/unpoller/ks.yaml
@@ -13,7 +13,7 @@ spec:
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/main/apps/observability/exporters/unpoller/app
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
