--- a/kubernetes/main/apps/observability/gatus/ks.yaml
+++ b/kubernetes/main/apps/observability/gatus/ks.yaml
@@ -23,7 +23,7 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: status
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
