--- a/kubernetes/main/apps/self-hosted/actual/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/actual/ks.yaml
@@ -19,7 +19,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
