--- a/kubernetes/utility/apps/home-automation/home-assistant/ks.yaml
+++ b/kubernetes/utility/apps/home-automation/home-assistant/ks.yaml
@@ -21,7 +21,7 @@ spec:
       APP: *app
       VOLSYNC_CAPACITY: 5Gi
       GATUS_SUBDOMAIN: hass
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
