--- a/kubernetes/utility/apps/observability/grafana/ks.yaml
+++ b/kubernetes/utility/apps/observability/grafana/ks.yaml
@@ -19,7 +19,7 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: grafana-utility
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
