--- a/kubernetes/utility/apps/observability/network-ups-tools/ks.yaml
+++ b/kubernetes/utility/apps/observability/network-ups-tools/ks.yaml
@@ -13,7 +13,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
