--- a/kubernetes/utility/apps/self-hosted/meshcentral/ks.yaml
+++ b/kubernetes/utility/apps/self-hosted/meshcentral/ks.yaml
@@ -19,7 +19,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
-  prune: false #revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
