feat: let er buck

--- a/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/helmrelease.yaml
@@ -126,7 +126,7 @@ spec:
             cpu: 20m
             memory: 50Mi
           limits:
-            cpu: 800m
+            cpu: 1
             memory: 500Mi
 
     matcher:
