feat: update github token

--- a/kubernetes/shared/meta/components/alerts/github/externalsecret.yaml
+++ b/kubernetes/shared/meta/components/alerts/github/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     name: *name
     template:
       data:
-        token: "{{ .FLUX_GITHUB_TOKEN }}"
+        token: "{{ .FLUX_${CLUSTER^^}_GITHUB_TOKEN }}"
   dataFrom:
     - extract:
         key: flux
