feat: update secrets

--- a/kubernetes/main/apps/network/external/cloudflared/externalsecret.yaml
+++ b/kubernetes/main/apps/network/external/cloudflared/externalsecret.yaml
@@ -15,8 +15,8 @@ spec:
         credentials.json: |
           {
             "AccountTag": "{{ .CLOUDFLARE_ACCOUNT_TAG }}",
-            "TunnelSecret": "{{ .CLOUDFLARE_TUNNEL_SECRET }}",
-            "TunnelID": "85be482d-5cf9-4ee5-a9a0-c489e3dd6188"
+            "TunnelSecret": "{{ .${CLUSTER^^}_CLOUDFLARE_TUNNEL_SECRET }}",
+            "TunnelID": "{{ .${CLUSTER^^}_CLOUDFLARE_TUNNEL_ID }}"
           }
   dataFrom:
   - extract:
