--- a/kubernetes/utility/apps/network/external/cloudflared/externalsecret.yaml
+++ b/kubernetes/utility/apps/network/external/cloudflared/externalsecret.yaml
@@ -15,8 +15,8 @@ spec:
         credentials.json: |
           {
             "AccountTag": "{{ .CLOUDFLARE_ACCOUNT_TAG }}",
-            "TunnelSecret": "{{ .UTILITY_CLOUDFLARE_TUNNEL_SECRET }}",
-            "TunnelID": "4e64e0e1-a45d-40c2-bb22-1d94f3bb51ba"
+            "TunnelSecret": "{{ .${CLUSTER^^}_CLOUDFLARE_TUNNEL_SECRET }}",
+            "TunnelID": "{{ .${CLUSTER^^}_CLOUDFLARE_TUNNEL_ID }}"
           }
   dataFrom:
   - extract:
