--- a/kubernetes/main/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/main/apps/self-hosted/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: self-hosted
 resources:
   - ./actual/ks.yaml
+  - ./archiveteam/ks.yaml
   - ./atuin/ks.yaml
   - ./homepage/ks.yaml
   - ./lubelog/ks.yaml
