fix: remove extra char

--- a/kubernetes/main/apps/self-hosted/paperless/app/helmrelease.yaml
+++ b/kubernetes/main/apps/self-hosted/paperless/app/helmrelease.yaml
@@ -108,6 +108,6 @@ spec:
       nas:
         type: nfs
         server: voyager.internal
-        path: ${SECRET_NFS_PAPERLESS}s
+        path: ${SECRET_NFS_PAPERLESS}
         globalMounts:
           - path: /data/nas
