feat: swap to volsync pvc

--- a/kubernetes/main/apps/self-hosted/archiveteam/app/helmrelease.yaml
+++ b/kubernetes/main/apps/self-hosted/archiveteam/app/helmrelease.yaml
@@ -77,9 +77,6 @@ spec:
                   port: http
     persistence:
       config:
-        type: persistentVolumeClaim
-        storageClass: ceph-block
-        size: 20Gi
-        accessMode: ReadWriteOnce
+        existingClaim: *app
         globalMounts:
           - path: /projects
