feat: add enable-aggregator-routing to talos configs

--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -88,8 +88,9 @@ patches:
     cluster:
       apiServer:
         extraArgs:
-          runtime-config: admissionregistration.k8s.io/v1alpha1=true
+          enable-aggregator-routing: true
           feature-gates: MutatingAdmissionPolicy=true
+          runtime-config: admissionregistration.k8s.io/v1alpha1=true
 
   # Custom sysctl settings
   - |-
